--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,11 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.6
   otp: ^3.1.4
+  flutter_otp_text_field: ^1.2.0
+  flutter_bloc: ^8.1.6
+  bloc: ^8.1.4
+  http: ^1.2.2
+  flutter_injections: ^1.1.1
 
 dev_dependencies:
   flutter_test:
@@ -20,3 +25,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/images/ 
